# nicetoolbox

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE.md  LICENSES_ALGORITHMS.md  Makefile  README.md  data.py  env_setup.bat  helper_functions.py  in_out.py  install.sh  machine_specific_paths_template.toml  main.py  pyproject.toml  requirements.txt  run_tests.sh
configs/: config.toml  config_handler.py  config_vitpose.toml  dataset_properties.toml  detectors_config.toml  detectors_run_file.toml  detectors_run_file_check.toml  evaluation_config.toml  machine_specific_paths_template.toml  predictions_mapping.toml  run_file.toml  run_file_check.toml  visualizer_config.toml  visualizer_config_mono.toml
detectors/: __init__.py  base_detector.py  data.py  in_out.py  main.py
detectors/active_speaker/: speaking_detector.py
detectors/configs/: __init__.py  config_handler.py  dataset_properties.toml  detectors_config.toml  predictions_mapping.toml  run_file.toml  run_file_check.toml  synchronization.py
detectors/facial_expression/: emoca.py
detectors/feature_detectors/: __init__.py  base_feature.py
detectors/feature_detectors/gaze_interaction/: __init__.py  gaze_distance.py
detectors/feature_detectors/kinematics/: __init__.py  utils.py  velocity_body.py
detectors/feature_detectors/leaning/: __init__.py  body_angle.py  utils.py
detectors/feature_detectors/proximity/: __init__.py  body_distance.py  (+1 more)
detectors/gaze/: ETH_XGaze.py  XGaze_3cams.py
detectors/human_pose/: filters.py  output_parser.py  pose_detector.py  utils.py
detectors/method_detectors/: __init__.py  base_detector.py  filters.py
detectors/nodding/: noddingpigeon.py
detectors/result_conversion/: to_csv.py
doc/: conf.py  index.rst
docs/: Makefile  README.md  README_rst.rst  api_detectors.rst  api_utils.rst  conf.py  doxygen  evaluation.rst  getting_started.md  index.rst  installation.md  make.bat  nicetoolbox.rst  sphinx_docs.md  tutorial1_new_dataset.md  tutorial2_calibration.md  tutorial2_dataset_multi_view.md  tutorials.md  tutorials.rst  visual.rst  wiki_algorithms.md  wiki_calibration.md  wiki_config_files.md  wikis.rst
docs/tutorials/: index.rst  tutorial1_dataset_single_view.md  tutorial2_dataset_multi_view.md  tutorial3_calibration_conversion.md  tutorial4_rerun_visualization.md  tutorial5_evaluation.md  tutorial6_results_wrapper.md
docs/wikis/: index.rst  wiki_algorithms.md  wiki_calibration.md  wiki_components.md  wiki_config_files.md  wiki_evaluation_metrics.md
feature_detectors/: base_feature.py
feature_detectors/gazeDistance/: gazeDistance.py
feature_detectors/gaze_interaction/: gaze_distance.py
feature_detectors/kinematics/: kinematics.py  utils.py  velocity_body.py
feature_detectors/leaning/: body_angle.py  leaning.py  utils.py
feature_detectors/proximity/: body_distance.py  proximity.py  utils.py
features/: base_feature.py
features/gazeDistance/: gazeDistance.py
features/kinematics/: kinematics.py  utils.py
features/leaning/: leaning.py  utils.py
features/proximity/: proximity.py  utils.py
installation/: check_prerequisites.bat  install_all.bat  install_all.sh  install_isatool_venv.bat  install_isatool_venv.sh  install_nicetoolbox_venv.bat  install_nicetoolbox_venv.sh  install_openmmlab_conda.bat  install_openmmlab_conda.sh  install_pyfeat_venv.bat  install_pyfeat_venv.sh  install_runner.sh  install_xgaze_venv.bat  install_xgaze_venv.sh  install_xgaze_venv_runner.sh  requirements.txt
method_detectors/: base_detector.py
method_detectors/active_speaker/: speaking_detector.py
method_detectors/body_joints/: filters.py  mmpose.py  output_parser.py  utils.py
method_detectors/facial_expression/: emoca.py
method_detectors/gaze/: ETH_XGaze.py  XGaze_3cams.py
method_detectors/gaze_individual/: XGaze_3cams.py
method_detectors/human_pose/: mmpose.py  output_parser.py  utils.py
method_detectors/nodding/: noddingpigeon.py
method_detectors/smiling/: opencvcascade.py
nice_toolbox/detectors/: data.py  in_out.py  main.py
nice_toolbox/utils/: __init__.py  check_and_exception.py  config.py  filehandling.py  git_utils.py  in_out.py  linear_algebra.py  logging_utils.py  triangulation.py  video.py
nice_toolbox/visual/: __init__.py  in_out.py
nicetoolbox/: version.py
nicetoolbox/configs/: __init__.py  config_handler.py  config_loader.py  placeholders.py  utils.py
nicetoolbox/detectors/: __init__.py  config_handler.py  data.py  in_out.py  main.py
nicetoolbox/evaluation/: __init__.py  auto_summaries.py  config_handler.py  config_schema.py  engine.py  in_out.py  main.py  runner.py
nicetoolbox/utils/: check_and_exception.py  comparison.py  comparisons.py  config.py  error_handling.py  filehandling.py  git_utils.py  in_out.py  linear_algebra.py  logging_utils.py  system.py  to_csv.py  triangulation.py  video.py  visual_utils.py
nicetoolbox/visual/: config_handler.py  in_out.py
nicetoolbox_core/: pyproject.toml
nicetoolbox_core/nicetoolbox_core/: dataloader.py  entrypoint.py  errors.py
scripts/: build_docker.sh
tests/: conftest.py  conftests.py  data_loader.py  fixtures.py  run_tests.py  test_bbox_intersection.py  test_compare_output.py  test_data.py  test_git.py  test_utils.py
tests/detectors/: test_detectors.py
tests/functional/: check_regression_output.py  test_functional_smoke.py
tests/utils/: test_comparisons.py  test_utils.py
tests/visual/: test_visual.py
utils/: __init__.py  check_and_exception.py  config.py  filehandling.py  git_utils.py  in_out.py  linear_algebra.py  logging_utils.py  system.py  triangulation.py  video.py  visual_utils.py
utils/calibration_gui/: __init__.py  calib_io.py  calibration_converter.py  constants.py  initialization.py  io.py  make_forms.py  matrix_utils.py
visual/: __init__.py  in_out.py
visual/configs/: __init__.py  config_handler.py  machine_specific_paths_template.toml  predictions_mapping.toml  visualizer_config.toml  visualizer_config_mono.toml
visual/media/: __init__.py  components.py  main.py  viewer.py
(+146 files in other folders)
