[project]
name = "nicetoolbox"
dynamic = ["readme"]
requires-python = ">3.7,<3.11"
version = "0.0.0"
dependencies = [
  "numpy",
  "opencv-python",
  "pandas",
  "pyyaml",
  "scikit-image",
  "toml",
]

#[project.scripts]
# Would probably need to refactor this script first!
# run_pipeline = "nicetoolbox.detectors.main:main"

# Setuptools
[tool.setuptools]
packages = ["nicetoolbox"]

[tool.setuptools.dynamic]
readme = {file = "README.md"}

[project.optional-dependencies]
dev = ["autopep8", "codespell", "docker", "faker", "isort", "mypy", "pre-commit", "pylint", "tox", "unittest-xml-reporting"]
visualization = ["matplotlib", "plotly", "rerun-sdk", "streamlit", "tueplots"]
test = ["pytest"]

# ruff
[tool.ruff]
line-length = 88
# exclude = ['./nicetoolbox/detectors/third_party/**']
# include = ['./nicetoolbox/detectors/third_party/**/inference.py']

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
# Format all docstring code snippets with a line length of 88.
docstring-code-line-length = 88
# Existing trailing commas are used as an indication that short lines should be left separate.
# Set to true, to ignore the magic trailing comma.
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "W",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "ARG",  # flake8-unused-arguments
    "R",    # refactor from pylint
    # TODO: add pylint!
    # "PL"    # pylint
    # TODO: add pydocstyle
    # "D"     # pydocstyle
    # TODO: add ruff-specific rules
    # "RUF",  # ruff-specific rules
]
preview = true
ignore = ["RET504"]  # TODO fix later

[tool.ruff.lint.isort]
split-on-trailing-comma = false
force-sort-within-sections = false

# Pylint
[tool.pylint.MASTER]
# TODO add (some?) pylint rules to pre-commit
# E.g., W0221 (arguments-differ) from pylint is not yet supported in ruff
# see https://github.com/astral-sh/ruff/issues/970
disable = "all"
enable = ["W0221"]

[tool.pylint.MESSAGES_CONTROL]
disable = "invalid-name"

[tool.codespell]
skip = "__pycache__,./.mypy_cache,.git,.idea,./venv,./env,./.tox"
