[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "nicetoolbox"
description = "NICE Toolbox provides tools for exploring nonverbal human communication using computer vision."
dynamic = ["readme"]
requires-python = ">3.7,<3.11"
version = "0.0.1"

dependencies = [
    "GitPython==3.1.35",
    "matplotlib",
    "numpy==1.24.3",
    "opencv-python==4.8.0.76",
    "pandas==2.1.0",
    "pathlib",
    "plotly",
    "pympi-ling==1.70.2",
    "pyyaml==6.0.1",
    "rerun-sdk==0.17.0",
    "scikit-image==0.21.0",
    "toml==0.10.2",
]

[project.optional-dependencies]
dev = [
    "codespell==2.2.4",
    "coverage",
    "faker",
    "myst_parser==3.0.1",
    # "mypy"  Yes/No?
    "pillow",
    "pytest==7.4.1",
    "pre-commit==4.0.1",
    "ruff==0.8.0",
    "sphinx==7.0.0",
    "sphinx-rtd-theme==2.0.0",
    "sphinxcontrib-video==0.3.1",
    "tox",
]
eval = [
    "icecream",
    "scikit-learn==1.0.2",
    "scipy==1.11.2",
    "torchmetrics",
]
visual = [
    "matplotlib",
    "plotly",
    "seaborn",
    "streamlit",
    "tueplots",
]

[project.scripts]
run_detectors = "nicetoolbox.detectors.main:entry_point"
run_visualization = "nicetoolbox.visual.media.main:entry_point"
run_calibration_gui = "nicetoolbox.utils.calibration_gui.calibration_converter:entry_point"

# Setuptools
[tool.setuptools.packages.find]
where = ["."]
include = [
    "nicetoolbox*",
]
exclude = [
    "tests*", # Exclude test directory
    "docs*",  # Exclude documentation directory
    "submodules*",  # Exclude submodules directory
    "envs*",  # Exclude environments directory
    "configs*",  # Exclude configs directory
]

[tool.setuptools.dynamic]
readme = {file = "README.md"}

# ruff
[tool.ruff]
line-length = 88
# exclude = ['./nicetoolbox/..']
# include = ['./nicetoolbox/..']

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
# Format all docstring code snippets with a line length of 88.
docstring-code-line-length = 88
# Existing trailing commas are used as an indication that short lines should be left separate.
# Set to true, to ignore the magic trailing comma.
skip-magic-trailing-comma = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "W",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "ARG",  # flake8-unused-arguments
    "R",    # refactor from pylint
    # TODO: add pylint!
    # "PL"    # pylint
    # TODO: add pydocstyle
    # "D"     # pydocstyle
    # TODO: add ruff-specific rules
    # "RUF",  # ruff-specific rules
]
preview = true
ignore = ["RET504"]  # TODO fix later

[tool.ruff.lint.isort]
split-on-trailing-comma = false
force-sort-within-sections = false

# Pylint
[tool.pylint.MASTER]
# TODO add (some?) pylint rules to pre-commit
# E.g., W0221 (arguments-differ) from pylint is not yet supported in ruff
# see https://github.com/astral-sh/ruff/issues/970
disable = "all"
enable = ["W0221"]

[tool.pylint.MESSAGES_CONTROL]
disable = "invalid-name"

[tool.codespell]
skip = "__pycache__,./.mypy_cache,.git,.idea,./venv,./env,./.tox"

# Coverage run settings
# coverage run -m  unittest discover
[tool.coverage.run]
branch = true
source= [
    "nicetoolbox"
]

# Coverage report settings
# coverage report -m
[tool.coverage.report]
omit= [
    "tests/*"
]
show_missing = true
skip_empty = true
